mobile spacing issue fixed on home page

--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -159,9 +159,16 @@
   
 
 @media (max-width: 420px)
+  .headline 
+    padding: 3em 0 0
+    h1 
+      padding: 0 1em
+      margin: 0
+      line-height: 1.3em
+    
   .content 
     height: 100vh
-    
+
   .biosnippet
     display: none
   
